# zee5

./: .dockerignore  .env  .env.example  COMPLETE-SOLUTION-SUMMARY.md  DOCKER-README.md  DOCKER-SETUP-SUMMARY.md  DOCKER-SETUP.md  Dockerfile  ENHANCEMENT-SUMMARY.md  FINAL-SETUP-STATUS.md  NETWORK-DEPLOYMENT-GUIDE.md  NETWORK-FIX.md  README-DOCKER.md  README.md  STREAMING-TROUBLESHOOTING.md  SUCCESS-SUMMARY.md  VLC-STREAMING-FIX.md  codebase_analysis.md  debug-stream.php  docker-compose.yml  fix_auth.py  get-server-info.php  get-stream-url.php  index.php  logs.sh  network-test.sh  playlist.php  proxy.php  quick_reference.txt  start.sh  stop.sh  stream.php  test-network.sh
.claude/: settings.local.json
python-app/: .env.example  .gitignore  ARCHITECTURE.md  MIGRATION.md  NETWORK-ACCESS.md  README.md  pyproject.toml  requirements.txt  test_api.py
python-app/app/: config.py  main.py  models.py
python-app/app/api/: playlist.py  proxy.py  routes.py  stream.py
python-app/app/core/: cache.py  cookie_manager.py  playwright_service.py  token_generator.py
python-app/app/services/: channel_cookie_service.py  channel_service.py  stream_service.py
python-app/app/templates/: debug.html  index.html
python-app/app/utils/: helpers.py  logger.py
python-app/docker/: Dockerfile  docker-compose.yml
python-app/scripts/: network-setup.sh  setup-dev.sh  start.sh  stop.sh
tmp/: .gitkeep
